welcome.lessons.welcome.bat.bool2.GreenTicket.scala.error
greenTicket:3: error: reassignment to val
if ( a=b & b=c & c=a){
      ^greenTicket:6: error: reassignment to val
if ( (a=b & a!=c) || (a=c & a!=b)|| (b=c & a!=c)){
       ^